--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@ body {
 	margin: 0 auto;
 }
 
+@media (max-width: 739px){
+	.container {
+		flex-direction: column;
+		max-width: 300px;
+	}
+}
+
 /* Menu */
 
 .menu {
@@ -33,8 +40,13 @@ body {
 	font-size: 1.125em;
 }
 
+.menu-logo {
+	margin: 0 10px;
+}
+
 .menu-nav {
 	flex: 1;
+	margin: 0 10px;
 	align-self: center;
 }
 
@@ -44,8 +56,20 @@ body {
 	list-style: none;
 }
 
-.menu-nav ul li{
+.menu-nav ul li a {
 	padding: 10px;
+}
+
+@media (max-width: 739px){
+	.menu-nav {
+		margin: 0;
+	}
+	.menu-logo{
+		margin: 0;
+	}
+	.menu-nav ul li a {
+		padding-left: 0px;
+	}
 }
 
 /* Intro */
@@ -75,6 +99,12 @@ body {
 .intro p {
 	font-style: italic;
 	font-size: 1.125em;
+}
+
+@media (max-width: 739px){
+	.intro{
+		padding: 60px 0;
+	}
 }
 
 /* Sobre */
@@ -120,6 +150,13 @@ body {
 	max-width: 460px;
 	text-align: center;
 }
+
+@media (max-width: 739px){
+	.sobre-item {
+		 margin-left: 0;
+		 margin-right: 0;
+	}
+ }
 
 /* Produtos */
 
@@ -183,6 +220,12 @@ h2.produtos-mineiro::before {
 	padding: 15px 0;
 	margin: 20px auto 0 auto;
 }
+@media (max-width: 739px){
+	.produtos-item {
+		 margin-left: 0;
+		 margin-right: 0;
+	}
+ }
 
 /* Locais */
 
@@ -223,6 +266,13 @@ h2.produtos-mineiro::before {
 	border: 3px solid;
 	color: #252525;
 	padding: 10px 20px;
+}
+
+@media (max-width: 739px){
+ .locais-img, .locais-info {
+		margin-left: 0;
+		margin-right: 0;
+ }
 }
 
 /* Assine */
@@ -282,6 +332,15 @@ h2.produtos-mineiro::before {
 	cursor: pointer;
 }
 
+@media (max-width: 739px){
+	.assine-info {
+		margin: 0 0 20px 0;
+	}
+	.assine form {
+		margin: 0;
+	}
+}
+
 /*Footer*/
 
 .footer {
@@ -297,4 +356,10 @@ h2.produtos-mineiro::before {
 
 .footer img {
 	margin: 0 10px;
+}
+
+@media (max-width: 739px){
+	.footer-img, .footer p {
+		margin: 10px 0;
+	}
 }
